# intelstream

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: throughput.rs
config/: cluster.toml  default.toml
crates/intelstream-api/: Cargo.toml  build.rs
crates/intelstream-api/src/: lib.rs
crates/intelstream-api/src/grpc/: intelstream.rs  mod.rs  service.rs
crates/intelstream-api/src/rest/: handlers.rs  mod.rs  models.rs
crates/intelstream-auth/: Cargo.toml
crates/intelstream-auth/src/: jwt.rs  lib.rs  rbac.rs
crates/intelstream-cli/: Cargo.toml
crates/intelstream-cli/src/: main.rs
crates/intelstream-client/: Cargo.toml
crates/intelstream-client/src/: consumer.rs  error.rs  lib.rs  producer.rs
crates/intelstream-connector/: Cargo.toml
crates/intelstream-connector/src/: lib.rs
crates/intelstream-connector/src/sinks/: console.rs  file.rs  mod.rs
crates/intelstream-core/: Cargo.toml
crates/intelstream-core/benches/: storage_bench.rs
crates/intelstream-core/src/: error.rs  lib.rs  message.rs
crates/intelstream-core/src/broker/: mod.rs
crates/intelstream-core/src/consensus/: mod.rs  transport.rs
crates/intelstream-core/src/partition/: mod.rs
crates/intelstream-core/src/replication/: manager.rs  mod.rs
crates/intelstream-core/src/storage/: commit_log.rs  index.rs  log_segment.rs  mod.rs
crates/intelstream-core/src/topic/: mod.rs
crates/intelstream-mcp/: Cargo.toml
crates/intelstream-mcp/src/: lib.rs  metrics_collector.rs
crates/intelstream-mcp/src/agents/: anomaly_detector.rs  auto_scaler.rs  failover_manager.rs  load_balancer.rs  mod.rs
crates/intelstream-mcp/src/dashboard/: mod.rs
crates/intelstream-schema/: Cargo.toml
crates/intelstream-schema/src/: lib.rs
crates/intelstream-server/: Cargo.toml
crates/intelstream-server/src/: config.rs  main.rs
crates/intelstream-stream/: Cargo.toml
crates/intelstream-stream/src/: lib.rs  operators.rs  processor.rs  state.rs  topology.rs
docker/: Dockerfile  docker-compose.yml  prometheus.yml
k8s/helm/intelstream/: Chart.yaml  values.yaml
k8s/helm/intelstream/templates/: _helpers.tpl  service.yaml  statefulset.yaml
proto/: intelstream.proto
tests/: smoke_test.sh
