[package]
name = "intelstream-api"
description = "REST and gRPC API layer for IntelStream"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
intelstream-core.workspace = true
intelstream-auth.workspace = true

tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
async-trait.workspace = true

# OpenAPI docs
utoipa = { version = "4", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

[build-dependencies]
tonic-build.workspace = true
