[package]
name = "intelstream-auth"
description = "Authentication and authorization for IntelStream (OAuth2, JWT, RBAC, TLS)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
jsonwebtoken.workspace = true
argon2.workspace = true
chrono.workspace = true
uuid.workspace = true
dashmap.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
