[package]
name = "intelstream-cli"
description = "Command-line interface for managing IntelStream clusters"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "isctl"
path = "src/main.rs"

[dependencies]
intelstream-client.workspace = true

tokio.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
colored.workspace = true
indicatif.workspace = true
dialoguer.workspace = true
tabled.workspace = true
reqwest.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
