[package]
name = "intelstream-client"
description = "Rust client SDK for IntelStream distributed streaming platform"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
bytes.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
uuid.workspace = true
chrono.workspace = true
dashmap.workspace = true
reqwest.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
mockall.workspace = true
