[package]
name = "intelstream-connector"
description = "Connector framework for IntelStream (databases, S3, external sinks)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
intelstream-core.workspace = true
intelstream-client.workspace = true

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
mockall.workspace = true
tempfile.workspace = true
