[package]
name = "intelstream-core"
description = "Core messaging engine for IntelStream distributed streaming platform"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tokio.workspace = true
tokio-util.workspace = true
serde.workspace = true
serde_json.workspace = true
bytes.workspace = true
bincode.workspace = true
tracing.workspace = true
rocksdb.workspace = true
memmap2.workspace = true
uuid.workspace = true
chrono.workspace = true
dashmap.workspace = true
crossbeam.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
rand.workspace = true
crc32fast.workspace = true
lz4.workspace = true
zstd.workspace = true
xxhash-rust.workspace = true
metrics.workspace = true

[dev-dependencies]
tempfile.workspace = true
criterion.workspace = true
mockall.workspace = true
proptest.workspace = true
tokio = { workspace = true, features = ["test-util"] }

[[bench]]
name = "storage_bench"
harness = false
