[package]
name = "intelstream-schema"
description = "Schema registry for managing message schema versions in IntelStream"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
intelstream-core.workspace = true

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
apache-avro.workspace = true
dashmap.workspace = true
chrono.workspace = true
