[package]
name = "intelstream-server"
description = "IntelStream distributed streaming platform server binary"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "intelstream"
path = "src/main.rs"

[dependencies]
intelstream-core.workspace = true
intelstream-api.workspace = true
intelstream-auth.workspace = true
intelstream-mcp.workspace = true
intelstream-schema.workspace = true

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
anyhow.workspace = true
