[package]
name = "intelstream-stream"
description = "Stream processing API for IntelStream (Kafka Streams alternative)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
intelstream-core.workspace = true
intelstream-client.workspace = true

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
dashmap.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
